// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render referral tx templates Referee 1`] = `
"
    <!doctype html>
    <html xmlns=\\"http://www.w3.org/1999/xhtml\\" xmlns:v=\\"urn:schemas-microsoft-com:vml\\" xmlns:o=\\"urn:schemas-microsoft-com:office:office\\">
      <head>
        <title>
          
        </title>
        <!--[if !mso]><!-->
        <meta http-equiv=\\"X-UA-Compatible\\" content=\\"IE=edge\\">
        <!--<![endif]-->
        <meta http-equiv=\\"Content-Type\\" content=\\"text/html; charset=UTF-8\\">
        <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1\\">
        <style type=\\"text/css\\">
          #outlook a { padding:0; }
          body { margin:0;padding:0;-webkit-text-size-adjust:100%;-ms-text-size-adjust:100%; }
          table, td { border-collapse:collapse;mso-table-lspace:0pt;mso-table-rspace:0pt; }
          img { border:0;height:auto;line-height:100%; outline:none;text-decoration:none;-ms-interpolation-mode:bicubic; }
          p { display:block;margin:13px 0; }
        </style>
        <!--[if mso]>
        <noscript>
        <xml>
        <o:OfficeDocumentSettings>
          <o:AllowPNG/>
          <o:PixelsPerInch>96</o:PixelsPerInch>
        </o:OfficeDocumentSettings>
        </xml>
        </noscript>
        <![endif]-->
        <!--[if lte mso 11]>
        <style type=\\"text/css\\">
          .mj-outlook-group-fix { width:100% !important; }
        </style>
        <![endif]-->
        
        
    <style type=\\"text/css\\">
      @media only screen and (min-width:576px) {
        .mj-column-per-100 { width:100% !important; max-width: 100%; }
.mj-column-per-65 { width:65% !important; max-width: 65%; }
.mj-column-per-15 { width:15% !important; max-width: 15%; }
.mj-column-per-10 { width:10% !important; max-width: 10%; }
.mj-column-per-50 { width:50% !important; max-width: 50%; }
      }
    </style>
    <style media=\\"screen and (min-width:576px)\\">
      .moz-text-html .mj-column-per-100 { width:100% !important; max-width: 100%; }
.moz-text-html .mj-column-per-65 { width:65% !important; max-width: 65%; }
.moz-text-html .mj-column-per-15 { width:15% !important; max-width: 15%; }
.moz-text-html .mj-column-per-10 { width:10% !important; max-width: 10%; }
.moz-text-html .mj-column-per-50 { width:50% !important; max-width: 50%; }
    </style>
    
  
        <style type=\\"text/css\\">
        
        

    @media only screen and (max-width:576px) {
      table.mj-full-width-mobile { width: 100% !important; }
      td.mj-full-width-mobile { width: auto !important; }
    }
  
        </style>
        <style type=\\"text/css\\">@media only screen and (max-width: 480px) { 
                  *[class~=hide_on_mobile] { display: none !important;} 
                  *[class~=hoverTable] { table-layout: auto !important;}
                }</style>
        
      </head>
      <body style=\\"word-spacing:normal;background-color:white;\\">
        
        
      <div
         style=\\"background-color:white;\\"
      >
        
      
      <!--[if mso | IE]><table align=\\"center\\" border=\\"0\\" cellpadding=\\"0\\" cellspacing=\\"0\\" class=\\"\\" style=\\"width:600px;\\" width=\\"600\\" bgcolor=\\"#f7f7f7\\" ><tr><td style=\\"line-height:0px;font-size:0px;mso-line-height-rule:exactly;\\"><v:rect style=\\"width:600px;\\" xmlns:v=\\"urn:schemas-microsoft-com:vml\\" fill=\\"true\\" stroke=\\"false\\"><v:fill origin=\\"0.5, 0\\" position=\\"0.5, 0\\" src=\\"\\" color=\\"#f7f7f7\\" type=\\"tile\\" size=\\"600px\\" aspect=\\"atmost\\" /><v:textbox style=\\"mso-fit-shape-to-text:true\\" inset=\\"0,0,0,0\\"><![endif]-->
          
      <div  style=\\"background:#f7f7f7;background-color:#f7f7f7;margin:0px auto;max-width:600px;\\">
        <div  style=\\"line-height:0;font-size:0;\\">
        <table
           align=\\"center\\" background=\\"\\" border=\\"0\\" cellpadding=\\"0\\" cellspacing=\\"0\\" role=\\"presentation\\" style=\\"background:#f7f7f7;background-color:#f7f7f7;width:100%;\\"
        >
          <tbody>
            <tr>
              <td
                 style=\\"direction:ltr;font-size:0px;padding:0px;padding-bottom:32px;padding-left:40px;padding-right:40px;padding-top:32px;text-align:center;\\"
              >
                <!--[if mso | IE]><table role=\\"presentation\\" border=\\"0\\" cellpadding=\\"0\\" cellspacing=\\"0\\"><tr><td class=\\"\\" style=\\"width:520px;\\" ><![endif]-->
            
      <div
         class=\\"mj-column-per-100 mj-outlook-group-fix\\" style=\\"font-size:0;line-height:0;text-align:left;display:inline-block;width:100%;direction:ltr;\\"
      >
        <!--[if mso | IE]><table border=\\"0\\" cellpadding=\\"0\\" cellspacing=\\"0\\" role=\\"presentation\\" ><tr><td style=\\"vertical-align:top;width:338px;\\" ><![endif]-->
                
      <div
         class=\\"mj-column-per-65 mj-outlook-group-fix\\" style=\\"font-size:0px;text-align:left;direction:ltr;display:inline-block;vertical-align:top;width:65%;\\"
      >
        
      <table
         border=\\"0\\" cellpadding=\\"0\\" cellspacing=\\"0\\" role=\\"presentation\\" width=\\"100%\\"
      >
        <tbody>
          <tr>
            <td  style=\\"vertical-align:top;padding:0px;\\">
              
      <table
         border=\\"0\\" cellpadding=\\"0\\" cellspacing=\\"0\\" role=\\"presentation\\" style=\\"\\" width=\\"100%\\"
      >
        <tbody>
          
              <tr>
                <td
                   align=\\"left\\" style=\\"font-size:0px;padding:0px;word-break:break-word;\\"
                >
                  
      <table
         border=\\"0\\" cellpadding=\\"0\\" cellspacing=\\"0\\" role=\\"presentation\\" style=\\"border-collapse:collapse;border-spacing:0px;\\"
      >
        <tbody>
          <tr>
            <td  style=\\"width:145px;\\">
              
      <img
         height=\\"auto\\" src=\\"http://localhost:3000/static/banners/like-coin-press-kit-liker-land-dark@3x.png\\" style=\\"border:0;display:block;outline:none;text-decoration:none;height:auto;width:100%;font-size:14px;\\" width=\\"145\\"
      />
    
            </td>
          </tr>
        </tbody>
      </table>
    
                </td>
              </tr>
            
        </tbody>
      </table>
    
            </td>
          </tr>
        </tbody>
      </table>
    
      </div>
    
              <!--[if mso | IE]></td><td style=\\"vertical-align:top;width:78px;\\" ><![endif]-->
                
      <div
         class=\\"mj-column-per-15 mj-outlook-group-fix hide_on_mobile\\" style=\\"font-size:0px;text-align:left;direction:ltr;display:inline-block;vertical-align:top;width:15%;\\"
      >
        
      <table
         border=\\"0\\" cellpadding=\\"0\\" cellspacing=\\"0\\" role=\\"presentation\\" width=\\"100%\\"
      >
        <tbody>
          <tr>
            <td  style=\\"vertical-align:top;padding:0px;\\">
              
      <table
         border=\\"0\\" cellpadding=\\"0\\" cellspacing=\\"0\\" role=\\"presentation\\" style=\\"\\" width=\\"100%\\"
      >
        <tbody>
          
              <tr>
                <td
                   align=\\"right\\" style=\\"font-size:0px;padding:0px;word-break:break-word;\\"
                >
                  
      <div
         style=\\"font-family:Arial;font-size:14px;font-weight:600;line-height:3.0;text-align:right;color:#4a4a4a;\\"
      >下載:</div>
    
                </td>
              </tr>
            
        </tbody>
      </table>
    
            </td>
          </tr>
        </tbody>
      </table>
    
      </div>
    
              <!--[if mso | IE]></td><td style=\\"vertical-align:top;width:52px;\\" ><![endif]-->
                
      <div
         class=\\"mj-column-per-10 mj-outlook-group-fix hide_on_mobile\\" style=\\"font-size:0px;text-align:left;direction:ltr;display:inline-block;vertical-align:top;width:10%;\\"
      >
        
      <table
         border=\\"0\\" cellpadding=\\"0\\" cellspacing=\\"0\\" role=\\"presentation\\" width=\\"100%\\"
      >
        <tbody>
          <tr>
            <td  style=\\"vertical-align:top;padding:0px;\\">
              
      <table
         border=\\"0\\" cellpadding=\\"0\\" cellspacing=\\"0\\" role=\\"presentation\\" style=\\"\\" width=\\"100%\\"
      >
        <tbody>
          
              <tr>
                <td
                   align=\\"center\\" style=\\"font-size:0px;padding:0px;word-break:break-word;\\"
                >
                  
      <div
         style=\\"font-family:Arial;font-size:14px;line-height:3.0;text-align:center;color:#4a4a4a;\\"
      ><a href=\\"https://liker.land/getapp\\" target=\\"_blank\\" rel=\\"noreferrer noopener\\" color=\\"#9b9b9b\\">iOS</a></div>
    
                </td>
              </tr>
            
        </tbody>
      </table>
    
            </td>
          </tr>
        </tbody>
      </table>
    
      </div>
    
              <!--[if mso | IE]></td><td style=\\"vertical-align:top;width:52px;\\" ><![endif]-->
                
      <div
         class=\\"mj-column-per-10 mj-outlook-group-fix hide_on_mobile\\" style=\\"font-size:0px;text-align:left;direction:ltr;display:inline-block;vertical-align:top;width:10%;\\"
      >
        
      <table
         border=\\"0\\" cellpadding=\\"0\\" cellspacing=\\"0\\" role=\\"presentation\\" width=\\"100%\\"
      >
        <tbody>
          <tr>
            <td  style=\\"vertical-align:top;padding:0px;\\">
              
      <table
         border=\\"0\\" cellpadding=\\"0\\" cellspacing=\\"0\\" role=\\"presentation\\" style=\\"\\" width=\\"100%\\"
      >
        <tbody>
          
              <tr>
                <td
                   align=\\"left\\" style=\\"font-size:0px;padding:0px;word-break:break-word;\\"
                >
                  
      <div
         style=\\"font-family:Arial;font-size:14px;line-height:3.0;text-align:left;color:#4a4a4a;\\"
      ><a href=\\"https://liker.land/getapp\\" target=\\"_blank\\" rel=\\"noreferrer noopener\\" color=\\"#9b9b9b\\">Android</a></div>
    
                </td>
              </tr>
            
        </tbody>
      </table>
    
            </td>
          </tr>
        </tbody>
      </table>
    
      </div>
    
              <!--[if mso | IE]></td></tr></table><![endif]-->
      </div>
    
          <!--[if mso | IE]></td></tr></table><![endif]-->
              </td>
            </tr>
          </tbody>
        </table>
        </div>
      </div>
    
        <!--[if mso | IE]></v:textbox></v:rect></td></tr></table><table align=\\"center\\" border=\\"0\\" cellpadding=\\"0\\" cellspacing=\\"0\\" class=\\"\\" style=\\"width:600px;\\" width=\\"600\\" bgcolor=\\"#28646e\\" ><tr><td style=\\"line-height:0px;font-size:0px;mso-line-height-rule:exactly;\\"><v:rect style=\\"width:600px;\\" xmlns:v=\\"urn:schemas-microsoft-com:vml\\" fill=\\"true\\" stroke=\\"false\\"><v:fill origin=\\"0.5, 0\\" position=\\"0.5, 0\\" src=\\"\\" color=\\"#28646e\\" type=\\"tile\\" size=\\"600px\\" aspect=\\"atmost\\" /><v:textbox style=\\"mso-fit-shape-to-text:true\\" inset=\\"0,0,0,0\\"><![endif]-->
          
      <div  style=\\"background:#28646e;background-color:#28646e;margin:0px auto;max-width:600px;\\">
        <div  style=\\"line-height:0;font-size:0;\\">
        <table
           align=\\"center\\" background=\\"\\" border=\\"0\\" cellpadding=\\"0\\" cellspacing=\\"0\\" role=\\"presentation\\" style=\\"background:#28646e;background-color:#28646e;width:100%;\\"
        >
          <tbody>
            <tr>
              <td
                 style=\\"direction:ltr;font-size:0px;padding:0px;padding-bottom:48px;padding-left:32px;padding-right:32px;padding-top:48px;text-align:center;\\"
              >
                <!--[if mso | IE]><table role=\\"presentation\\" border=\\"0\\" cellpadding=\\"0\\" cellspacing=\\"0\\"><tr><td class=\\"\\" style=\\"vertical-align:top;width:536px;\\" ><![endif]-->
            
      <div
         class=\\"mj-column-per-100 mj-outlook-group-fix\\" style=\\"font-size:0px;text-align:left;direction:ltr;display:inline-block;vertical-align:top;width:100%;\\"
      >
        
      <table
         border=\\"0\\" cellpadding=\\"0\\" cellspacing=\\"0\\" role=\\"presentation\\" width=\\"100%\\"
      >
        <tbody>
          <tr>
            <td  style=\\"vertical-align:top;padding:0px;\\">
              
      <table
         border=\\"0\\" cellpadding=\\"0\\" cellspacing=\\"0\\" role=\\"presentation\\" style=\\"\\" width=\\"100%\\"
      >
        <tbody>
          
              <tr>
                <td
                   align=\\"center\\" style=\\"font-size:0px;padding:0px;padding-bottom:24px;word-break:break-word;\\"
                >
                  
      <div
         style=\\"font-family:Arial;font-size:24px;font-weight:600;line-height:1.5;text-align:center;color:white;\\"
      >恭喜，你已獲得推薦奬賞</div>
    
                </td>
              </tr>
            
              <tr>
                <td
                   align=\\"center\\" style=\\"font-size:0px;padding:0px;word-break:break-word;\\"
                >
                  
      <table
         border=\\"0\\" cellpadding=\\"0\\" cellspacing=\\"0\\" role=\\"presentation\\" style=\\"border-collapse:collapse;border-spacing:0px;\\"
      >
        <tbody>
          <tr>
            <td  style=\\"width:288px;\\">
              
      <img
         height=\\"auto\\" src=\\"http://localhost:3000/static/banners/referral-rewards.png\\" style=\\"border:0;display:block;outline:none;text-decoration:none;height:auto;width:100%;font-size:14px;\\" width=\\"288\\"
      />
    
            </td>
          </tr>
        </tbody>
      </table>
    
                </td>
              </tr>
            
              <tr>
                <td
                   align=\\"center\\" style=\\"font-size:0px;padding:0px;padding-top:32px;word-break:break-word;\\"
                >
                  
      <div
         style=\\"font-family:Arial;font-size:14px;font-weight:600;line-height:1.5;text-align:center;color:#50e3c2;\\"
      >你因 <span style=\\"color:white\\">Foundation</span> 的推薦下載了 Liker Land。<br/>你們兩位各獲得 100 LikeCoin 奬賞。</div>
    
                </td>
              </tr>
            
        </tbody>
      </table>
    
            </td>
          </tr>
        </tbody>
      </table>
    
      </div>
    
          <!--[if mso | IE]></td></tr></table><![endif]-->
              </td>
            </tr>
          </tbody>
        </table>
        </div>
      </div>
    
        <!--[if mso | IE]></v:textbox></v:rect></td></tr></table><table align=\\"center\\" border=\\"0\\" cellpadding=\\"0\\" cellspacing=\\"0\\" class=\\"\\" style=\\"width:600px;\\" width=\\"600\\" bgcolor=\\"#f7f7f7\\" ><tr><td style=\\"line-height:0px;font-size:0px;mso-line-height-rule:exactly;\\"><v:rect style=\\"width:600px;\\" xmlns:v=\\"urn:schemas-microsoft-com:vml\\" fill=\\"true\\" stroke=\\"false\\"><v:fill origin=\\"0.5, 0\\" position=\\"0.5, 0\\" src=\\"\\" color=\\"#f7f7f7\\" type=\\"tile\\" size=\\"600px\\" aspect=\\"atmost\\" /><v:textbox style=\\"mso-fit-shape-to-text:true\\" inset=\\"0,0,0,0\\"><![endif]-->
          
      <div  style=\\"background:#f7f7f7;background-color:#f7f7f7;margin:0px auto;max-width:600px;\\">
        <div  style=\\"line-height:0;font-size:0;\\">
        <table
           align=\\"center\\" background=\\"\\" border=\\"0\\" cellpadding=\\"0\\" cellspacing=\\"0\\" role=\\"presentation\\" style=\\"background:#f7f7f7;background-color:#f7f7f7;width:100%;\\"
        >
          <tbody>
            <tr>
              <td
                 style=\\"direction:ltr;font-size:0px;padding:0px;padding-bottom:32px;padding-left:32px;padding-right:32px;padding-top:32px;text-align:center;\\"
              >
                <!--[if mso | IE]><table role=\\"presentation\\" border=\\"0\\" cellpadding=\\"0\\" cellspacing=\\"0\\"><tr><td class=\\"\\" style=\\"vertical-align:top;width:268px;\\" ><![endif]-->
            
      <div
         class=\\"mj-column-per-50 mj-outlook-group-fix\\" style=\\"font-size:0px;text-align:left;direction:ltr;display:inline-block;vertical-align:top;width:100%;\\"
      >
        
      <table
         border=\\"0\\" cellpadding=\\"0\\" cellspacing=\\"0\\" role=\\"presentation\\" width=\\"100%\\"
      >
        <tbody>
          <tr>
            <td  style=\\"vertical-align:top;padding:8px;\\">
              
      <table
         border=\\"0\\" cellpadding=\\"0\\" cellspacing=\\"0\\" role=\\"presentation\\" style=\\"\\" width=\\"100%\\"
      >
        <tbody>
          <a href=\\"https://liker.land/?utm_medium=email&amp;utm_source=email\\" target=\\"_blank\\" rel=\\"noreferrer noopener\\" style=\\"color:#28646e;text-decoration:underline;display:block;text-align:center;padding:8px;line-height:1\\"><img src=\\"https://liker.land/logo.png\\" alt=\\"\\" style=\\"width:88px;height:88px;border-radius:100%;object-fit:cover;border:2px solid #ccc\\"/></a>
              <tr>
                <td
                   align=\\"center\\" style=\\"font-size:0px;padding:0px;padding-top:8px;padding-bottom:8px;word-break:break-word;\\"
                >
                  
      <div
         style=\\"font-family:Arial;font-size:18px;font-weight:600;line-height:1.5;text-align:center;color:#28646e;\\"
      >Foundation</div>
    
                </td>
              </tr>
            
              <tr>
                <td
                   align=\\"center\\" style=\\"font-size:0px;padding:0px;word-break:break-word;\\"
                >
                  
      <div
         style=\\"font-family:Arial;font-size:20px;font-weight:600;line-height:1.5;text-align:center;color:#4a4a4a;\\"
      >+100 LIKE</div>
    
                </td>
              </tr>
            
        </tbody>
      </table>
    
            </td>
          </tr>
        </tbody>
      </table>
    
      </div>
    
          <!--[if mso | IE]></td><td class=\\"\\" style=\\"vertical-align:top;width:268px;\\" ><![endif]-->
            
      <div
         class=\\"mj-column-per-50 mj-outlook-group-fix\\" style=\\"font-size:0px;text-align:left;direction:ltr;display:inline-block;vertical-align:top;width:100%;\\"
      >
        
      <table
         border=\\"0\\" cellpadding=\\"0\\" cellspacing=\\"0\\" role=\\"presentation\\" width=\\"100%\\"
      >
        <tbody>
          <tr>
            <td  style=\\"vertical-align:top;padding:8px;\\">
              
      <table
         border=\\"0\\" cellpadding=\\"0\\" cellspacing=\\"0\\" role=\\"presentation\\" style=\\"\\" width=\\"100%\\"
      >
        <tbody>
          <a href=\\"https://liker.land/?utm_medium=email&amp;utm_source=email\\" target=\\"_blank\\" rel=\\"noreferrer noopener\\" style=\\"color:#28646e;text-decoration:underline;display:block;text-align:center;padding:8px;line-height:1;background-image:url(http://localhost:3000/static/avatar/halo/civic-liker.png);background-repeat:no-repeat;background-position:center center;background-size:contain\\"><img src=\\"http://localhost:3000/static/default-avatar.jpg\\" alt=\\"\\" style=\\"width:88px;height:88px;border-radius:100%;object-fit:cover;border:2px solid #ccc\\"/></a>
              <tr>
                <td
                   align=\\"center\\" style=\\"font-size:0px;padding:0px;padding-top:8px;padding-bottom:8px;word-break:break-word;\\"
                >
                  
      <div
         style=\\"font-family:Arial;font-size:18px;font-weight:600;line-height:1.5;text-align:center;color:#28646e;\\"
      >Ng Wing Tat</div>
    
                </td>
              </tr>
            
              <tr>
                <td
                   align=\\"center\\" style=\\"font-size:0px;padding:0px;word-break:break-word;\\"
                >
                  
      <div
         style=\\"font-family:Arial;font-size:20px;font-weight:600;line-height:1.5;text-align:center;color:#4a4a4a;\\"
      >+100 LIKE</div>
    
                </td>
              </tr>
            
        </tbody>
      </table>
    
            </td>
          </tr>
        </tbody>
      </table>
    
      </div>
    
          <!--[if mso | IE]></td></tr></table><![endif]-->
              </td>
            </tr>
          </tbody>
        </table>
        </div>
      </div>
    
        <!--[if mso | IE]></v:textbox></v:rect></td></tr></table><table align=\\"center\\" border=\\"0\\" cellpadding=\\"0\\" cellspacing=\\"0\\" class=\\"\\" style=\\"width:600px;\\" width=\\"600\\" bgcolor=\\"#f7f7f7\\" ><tr><td style=\\"line-height:0px;font-size:0px;mso-line-height-rule:exactly;\\"><v:rect style=\\"width:600px;\\" xmlns:v=\\"urn:schemas-microsoft-com:vml\\" fill=\\"true\\" stroke=\\"false\\"><v:fill origin=\\"0.5, 0\\" position=\\"0.5, 0\\" src=\\"\\" color=\\"#f7f7f7\\" type=\\"tile\\" size=\\"600px\\" aspect=\\"atmost\\" /><v:textbox style=\\"mso-fit-shape-to-text:true\\" inset=\\"0,0,0,0\\"><![endif]-->
          
      <div  style=\\"background:#f7f7f7;background-color:#f7f7f7;margin:0px auto;max-width:600px;\\">
        <div  style=\\"line-height:0;font-size:0;\\">
        <table
           align=\\"center\\" background=\\"\\" border=\\"0\\" cellpadding=\\"0\\" cellspacing=\\"0\\" role=\\"presentation\\" style=\\"background:#f7f7f7;background-color:#f7f7f7;width:100%;\\"
        >
          <tbody>
            <tr>
              <td
                 style=\\"direction:ltr;font-size:0px;padding:0px;padding-bottom:32px;padding-left:32px;padding-right:32px;padding-top:0px;text-align:center;\\"
              >
                <!--[if mso | IE]><table role=\\"presentation\\" border=\\"0\\" cellpadding=\\"0\\" cellspacing=\\"0\\"><tr><td class=\\"\\" style=\\"vertical-align:top;width:536px;\\" ><![endif]-->
            
      <div
         class=\\"mj-column-per-100 mj-outlook-group-fix\\" style=\\"font-size:0px;text-align:left;direction:ltr;display:inline-block;vertical-align:top;width:100%;\\"
      >
        
      <table
         border=\\"0\\" cellpadding=\\"0\\" cellspacing=\\"0\\" role=\\"presentation\\" width=\\"100%\\"
      >
        <tbody>
          <tr>
            <td  style=\\"vertical-align:top;padding:0px;\\">
              
      <table
         border=\\"0\\" cellpadding=\\"0\\" cellspacing=\\"0\\" role=\\"presentation\\" style=\\"\\" width=\\"100%\\"
      >
        <tbody>
          
              <tr>
                <td
                   align=\\"center\\" style=\\"font-size:0px;padding:0px;word-break:break-word;\\"
                >
                  
      <div
         style=\\"font-family:Arial;font-size:14px;line-height:1.5;text-align:center;color:#9b9b9b;\\"
      >奬金已轉帳至你的錢包，請用 <a href=\\"https://liker.land/getapp?utm_medium=email&amp;utm_source=email\\" target=\\"_blank\\" rel=\\"noreferrer noopener\\" style=\\"color:#28646e;text-decoration:underline\\">Liker Land app</a> 查看。</div>
    
                </td>
              </tr>
            
        </tbody>
      </table>
    
            </td>
          </tr>
        </tbody>
      </table>
    
      </div>
    
          <!--[if mso | IE]></td></tr></table><![endif]-->
              </td>
            </tr>
          </tbody>
        </table>
        </div>
      </div>
    
        <!--[if mso | IE]></v:textbox></v:rect></td></tr></table><table align=\\"center\\" border=\\"0\\" cellpadding=\\"0\\" cellspacing=\\"0\\" class=\\"\\" style=\\"width:600px;\\" width=\\"600\\" bgcolor=\\"#f7f7f7\\" ><tr><td style=\\"line-height:0px;font-size:0px;mso-line-height-rule:exactly;\\"><v:rect style=\\"width:600px;\\" xmlns:v=\\"urn:schemas-microsoft-com:vml\\" fill=\\"true\\" stroke=\\"false\\"><v:fill origin=\\"0.5, 0\\" position=\\"0.5, 0\\" src=\\"\\" color=\\"#f7f7f7\\" type=\\"tile\\" size=\\"600px\\" aspect=\\"atmost\\" /><v:textbox style=\\"mso-fit-shape-to-text:true\\" inset=\\"0,0,0,0\\"><![endif]-->
          
      <div  style=\\"background:#f7f7f7;background-color:#f7f7f7;margin:0px auto;max-width:600px;\\">
        <div  style=\\"line-height:0;font-size:0;\\">
        <table
           align=\\"center\\" background=\\"\\" border=\\"0\\" cellpadding=\\"0\\" cellspacing=\\"0\\" role=\\"presentation\\" style=\\"background:#f7f7f7;background-color:#f7f7f7;width:100%;\\"
        >
          <tbody>
            <tr>
              <td
                 style=\\"direction:ltr;font-size:0px;padding:0px;padding-bottom:32px;padding-left:16px;padding-right:16px;padding-top:32px;text-align:center;\\"
              >
                <!--[if mso | IE]><table role=\\"presentation\\" border=\\"0\\" cellpadding=\\"0\\" cellspacing=\\"0\\"><tr><td class=\\"\\" style=\\"vertical-align:top;width:568px;\\" ><![endif]-->
            
      <div
         class=\\"mj-column-per-100 mj-outlook-group-fix\\" style=\\"font-size:0px;text-align:left;direction:ltr;display:inline-block;vertical-align:top;width:100%;\\"
      >
        
      <table
         border=\\"0\\" cellpadding=\\"0\\" cellspacing=\\"0\\" role=\\"presentation\\" width=\\"100%\\"
      >
        <tbody>
          <tr>
            <td  style=\\"vertical-align:top;padding:0px;\\">
              
      <table
         border=\\"0\\" cellpadding=\\"0\\" cellspacing=\\"0\\" role=\\"presentation\\" style=\\"\\" width=\\"100%\\"
      >
        <tbody>
          
              <tr>
                <td
                   align=\\"center\\" style=\\"font-size:0px;padding:0px;padding-bottom:16px;word-break:break-word;\\"
                >
                  
      <table
         border=\\"0\\" cellpadding=\\"0\\" cellspacing=\\"0\\" role=\\"presentation\\" style=\\"border-collapse:collapse;border-spacing:0px;\\"
      >
        <tbody>
          <tr>
            <td  style=\\"width:400px;\\">
              
      <img
         alt=\\"Liker Land App\\" height=\\"auto\\" src=\\"http://localhost:3000/static/banners/cta-app/zh.png\\" style=\\"border:0;display:block;outline:none;text-decoration:none;height:auto;width:100%;font-size:14px;\\" width=\\"400\\"
      />
    
            </td>
          </tr>
        </tbody>
      </table>
    
                </td>
              </tr>
            
              <tr>
                <td
                   align=\\"center\\" style=\\"font-size:0px;padding:0px;padding-right:24px;padding-left:24px;word-break:break-word;\\"
                >
                  
      
     <!--[if mso | IE]><table align=\\"center\\" border=\\"0\\" cellpadding=\\"0\\" cellspacing=\\"0\\" role=\\"presentation\\" ><tr><td><![endif]-->
              <table
                 align=\\"center\\" border=\\"0\\" cellpadding=\\"0\\" cellspacing=\\"0\\" role=\\"presentation\\" style=\\"float:none;display:inline-table;\\"
              >
                
      <tr
        
      >
        <td  style=\\"padding:8px;vertical-align:middle;\\">
          <table
             border=\\"0\\" cellpadding=\\"0\\" cellspacing=\\"0\\" role=\\"presentation\\" style=\\"border-radius:3px;width:106px;\\"
          >
            <tr>
              <td  style=\\"font-size:0;height:35px;vertical-align:middle;width:106px;\\">
                <a  href=\\"https://likecoin.page.link/likerland?utm_medium=email&amp;utm_source=email\\" target=\\"_blank\\">
                    <img
                       height=\\"35\\" src=\\"http://localhost:3000/static/badges/app-store.png\\" style=\\"border-radius:3px;display:block;\\" width=\\"106\\"
                    />
                  </a>
                </td>
              </tr>
          </table>
        </td>
        
      </tr>
    
              </table>
            <!--[if mso | IE]></td><td><![endif]-->
              <table
                 align=\\"center\\" border=\\"0\\" cellpadding=\\"0\\" cellspacing=\\"0\\" role=\\"presentation\\" style=\\"float:none;display:inline-table;\\"
              >
                
      <tr
        
      >
        <td  style=\\"padding:8px;vertical-align:middle;\\">
          <table
             border=\\"0\\" cellpadding=\\"0\\" cellspacing=\\"0\\" role=\\"presentation\\" style=\\"border-radius:3px;width:119px;\\"
          >
            <tr>
              <td  style=\\"font-size:0;height:35px;vertical-align:middle;width:119px;\\">
                <a  href=\\"https://likecoin.page.link/likerland?utm_medium=email&amp;utm_source=email\\" target=\\"_blank\\">
                    <img
                       height=\\"35\\" src=\\"http://localhost:3000/static/badges/google-play.png\\" style=\\"border-radius:3px;display:block;\\" width=\\"119\\"
                    />
                  </a>
                </td>
              </tr>
          </table>
        </td>
        
      </tr>
    
              </table>
            <!--[if mso | IE]></td></tr></table><![endif]-->
    
    
                </td>
              </tr>
            
        </tbody>
      </table>
    
            </td>
          </tr>
        </tbody>
      </table>
    
      </div>
    
          <!--[if mso | IE]></td></tr></table><![endif]-->
              </td>
            </tr>
          </tbody>
        </table>
        </div>
      </div>
    
        <!--[if mso | IE]></v:textbox></v:rect></td></tr></table><table align=\\"center\\" border=\\"0\\" cellpadding=\\"0\\" cellspacing=\\"0\\" class=\\"\\" style=\\"width:600px;\\" width=\\"600\\" bgcolor=\\"white\\" ><tr><td style=\\"line-height:0px;font-size:0px;mso-line-height-rule:exactly;\\"><![endif]-->
    
      
      <div  style=\\"background:white;background-color:white;margin:0px auto;max-width:600px;\\">
        
        <table
           align=\\"center\\" border=\\"0\\" cellpadding=\\"0\\" cellspacing=\\"0\\" role=\\"presentation\\" style=\\"background:white;background-color:white;width:100%;\\"
        >
          <tbody>
            <tr>
              <td
                 style=\\"direction:ltr;font-size:0px;padding:0px;padding-bottom:24px;padding-left:32px;padding-right:32px;padding-top:24px;text-align:center;\\"
              >
                <!--[if mso | IE]><table role=\\"presentation\\" border=\\"0\\" cellpadding=\\"0\\" cellspacing=\\"0\\"><tr><td class=\\"\\" style=\\"vertical-align:top;width:536px;\\" ><![endif]-->
            
      <div
         class=\\"mj-column-per-100 mj-outlook-group-fix\\" style=\\"font-size:0px;text-align:left;direction:ltr;display:inline-block;vertical-align:top;width:100%;\\"
      >
        
      <table
         border=\\"0\\" cellpadding=\\"0\\" cellspacing=\\"0\\" role=\\"presentation\\" width=\\"100%\\"
      >
        <tbody>
          <tr>
            <td  style=\\"vertical-align:top;padding:0px;\\">
              
      <table
         border=\\"0\\" cellpadding=\\"0\\" cellspacing=\\"0\\" role=\\"presentation\\" style=\\"\\" width=\\"100%\\"
      >
        <tbody>
          
              <tr>
                <td
                   align=\\"center\\" style=\\"background:white;font-size:0px;padding:0px;padding-top:8px;padding-bottom:8px;word-break:break-word;\\"
                >
                  
      
     <!--[if mso | IE]><table align=\\"center\\" border=\\"0\\" cellpadding=\\"0\\" cellspacing=\\"0\\" role=\\"presentation\\" ><tr><td><![endif]-->
              <table
                 align=\\"center\\" border=\\"0\\" cellpadding=\\"0\\" cellspacing=\\"0\\" role=\\"presentation\\" style=\\"float:none;display:inline-table;\\"
              >
                
      <tr
        
      >
        <td  style=\\"padding:6px;vertical-align:middle;\\">
          <table
             border=\\"0\\" cellpadding=\\"0\\" cellspacing=\\"0\\" role=\\"presentation\\" style=\\"border-radius:24px;width:28px;\\"
          >
            <tr>
              <td  style=\\"font-size:0;height:28px;vertical-align:middle;width:28px;\\">
                <a  href=\\"https://discord.gg/W4DQ6peZZZ\\" target=\\"_blank\\">
                    <img
                       height=\\"28\\" src=\\"http://localhost:3000/static/social-elements/discord.png\\" style=\\"border-radius:24px;display:block;\\" width=\\"28\\"
                    />
                  </a>
                </td>
              </tr>
          </table>
        </td>
        
      </tr>
    
              </table>
            <!--[if mso | IE]></td><td><![endif]-->
              <table
                 align=\\"center\\" border=\\"0\\" cellpadding=\\"0\\" cellspacing=\\"0\\" role=\\"presentation\\" style=\\"float:none;display:inline-table;\\"
              >
                
      <tr
        
      >
        <td  style=\\"padding:6px;vertical-align:middle;\\">
          <table
             border=\\"0\\" cellpadding=\\"0\\" cellspacing=\\"0\\" role=\\"presentation\\" style=\\"border-radius:24px;width:28px;\\"
          >
            <tr>
              <td  style=\\"font-size:0;height:28px;vertical-align:middle;width:28px;\\">
                <a  href=\\"https://medium.com/likecoin\\" target=\\"_blank\\">
                    <img
                       height=\\"28\\" src=\\"http://localhost:3000/static/social-elements/medium.png\\" style=\\"border-radius:24px;display:block;\\" width=\\"28\\"
                    />
                  </a>
                </td>
              </tr>
          </table>
        </td>
        
      </tr>
    
              </table>
            <!--[if mso | IE]></td><td><![endif]-->
              <table
                 align=\\"center\\" border=\\"0\\" cellpadding=\\"0\\" cellspacing=\\"0\\" role=\\"presentation\\" style=\\"float:none;display:inline-table;\\"
              >
                
      <tr
        
      >
        <td  style=\\"padding:6px;vertical-align:middle;\\">
          <table
             border=\\"0\\" cellpadding=\\"0\\" cellspacing=\\"0\\" role=\\"presentation\\" style=\\"border-radius:24px;width:28px;\\"
          >
            <tr>
              <td  style=\\"font-size:0;height:28px;vertical-align:middle;width:28px;\\">
                <a  href=\\"https://twitter.com/likecoin\\" target=\\"_blank\\">
                    <img
                       height=\\"28\\" src=\\"http://localhost:3000/static/social-elements/twitter.png\\" style=\\"border-radius:24px;display:block;\\" width=\\"28\\"
                    />
                  </a>
                </td>
              </tr>
          </table>
        </td>
        
      </tr>
    
              </table>
            <!--[if mso | IE]></td><td><![endif]-->
              <table
                 align=\\"center\\" border=\\"0\\" cellpadding=\\"0\\" cellspacing=\\"0\\" role=\\"presentation\\" style=\\"float:none;display:inline-table;\\"
              >
                
      <tr
        
      >
        <td  style=\\"padding:6px;vertical-align:middle;\\">
          <table
             border=\\"0\\" cellpadding=\\"0\\" cellspacing=\\"0\\" role=\\"presentation\\" style=\\"border-radius:24px;width:28px;\\"
          >
            <tr>
              <td  style=\\"font-size:0;height:28px;vertical-align:middle;width:28px;\\">
                <a  href=\\"https://github.com/likecoin\\" target=\\"_blank\\">
                    <img
                       height=\\"28\\" src=\\"http://localhost:3000/static/social-elements/github.png\\" style=\\"border-radius:24px;display:block;\\" width=\\"28\\"
                    />
                  </a>
                </td>
              </tr>
          </table>
        </td>
        
      </tr>
    
              </table>
            <!--[if mso | IE]></td><td><![endif]-->
              <table
                 align=\\"center\\" border=\\"0\\" cellpadding=\\"0\\" cellspacing=\\"0\\" role=\\"presentation\\" style=\\"float:none;display:inline-table;\\"
              >
                
      <tr
        
      >
        <td  style=\\"padding:6px;vertical-align:middle;\\">
          <table
             border=\\"0\\" cellpadding=\\"0\\" cellspacing=\\"0\\" role=\\"presentation\\" style=\\"border-radius:24px;width:28px;\\"
          >
            <tr>
              <td  style=\\"font-size:0;height:28px;vertical-align:middle;width:28px;\\">
                <a  href=\\"https://www.facebook.com/groups/likecoin\\" target=\\"_blank\\">
                    <img
                       height=\\"28\\" src=\\"http://localhost:3000/static/social-elements/facebook.png\\" style=\\"border-radius:24px;display:block;\\" width=\\"28\\"
                    />
                  </a>
                </td>
              </tr>
          </table>
        </td>
        
      </tr>
    
              </table>
            <!--[if mso | IE]></td></tr></table><![endif]-->
    
    
                </td>
              </tr>
            
              <tr>
                <td
                   align=\\"center\\" style=\\"font-size:0px;padding:4px;word-break:break-word;\\"
                >
                  
      <div
         style=\\"font-family:Arial;font-size:14px;line-height:1.5;text-align:center;color:#4a4a4a;\\"
      ><a href=\\"https://docs.like.co/v/zh?utm_medium=email&amp;utm_source=email\\" target=\\"_blank\\" rel=\\"noreferrer noopener\\" style=\\"color:#28646e;text-decoration:underline\\">幫助中心</a></div>
    
                </td>
              </tr>
            
              <tr>
                <td
                   align=\\"center\\" style=\\"font-size:0px;padding:4px;word-break:break-word;\\"
                >
                  
      <div
         style=\\"font-family:Arial;font-size:14px;line-height:1.5;text-align:center;color:#4a4a4a;\\"
      ><a href=\\"https://like.co/in/settings/others?utm_medium=email&amp;utm_source=email\\" target=\\"_blank\\" rel=\\"noreferrer noopener\\" style=\\"color:#28646e;text-decoration:underline\\">取消訂閱</a></div>
    
                </td>
              </tr>
            
        </tbody>
      </table>
    
            </td>
          </tr>
        </tbody>
      </table>
    
      </div>
    
          <!--[if mso | IE]></td></tr></table><![endif]-->
              </td>
            </tr>
          </tbody>
        </table>
        
      </div>
    
      
      <!--[if mso | IE]></td></tr></table><![endif]-->
    
    
      </div>
    
      </body>
    </html>
  "
`;

exports[`Render referral tx templates Referrer 1`] = `
"
    <!doctype html>
    <html xmlns=\\"http://www.w3.org/1999/xhtml\\" xmlns:v=\\"urn:schemas-microsoft-com:vml\\" xmlns:o=\\"urn:schemas-microsoft-com:office:office\\">
      <head>
        <title>
          
        </title>
        <!--[if !mso]><!-->
        <meta http-equiv=\\"X-UA-Compatible\\" content=\\"IE=edge\\">
        <!--<![endif]-->
        <meta http-equiv=\\"Content-Type\\" content=\\"text/html; charset=UTF-8\\">
        <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1\\">
        <style type=\\"text/css\\">
          #outlook a { padding:0; }
          body { margin:0;padding:0;-webkit-text-size-adjust:100%;-ms-text-size-adjust:100%; }
          table, td { border-collapse:collapse;mso-table-lspace:0pt;mso-table-rspace:0pt; }
          img { border:0;height:auto;line-height:100%; outline:none;text-decoration:none;-ms-interpolation-mode:bicubic; }
          p { display:block;margin:13px 0; }
        </style>
        <!--[if mso]>
        <noscript>
        <xml>
        <o:OfficeDocumentSettings>
          <o:AllowPNG/>
          <o:PixelsPerInch>96</o:PixelsPerInch>
        </o:OfficeDocumentSettings>
        </xml>
        </noscript>
        <![endif]-->
        <!--[if lte mso 11]>
        <style type=\\"text/css\\">
          .mj-outlook-group-fix { width:100% !important; }
        </style>
        <![endif]-->
        
        
    <style type=\\"text/css\\">
      @media only screen and (min-width:576px) {
        .mj-column-per-100 { width:100% !important; max-width: 100%; }
.mj-column-per-65 { width:65% !important; max-width: 65%; }
.mj-column-per-15 { width:15% !important; max-width: 15%; }
.mj-column-per-10 { width:10% !important; max-width: 10%; }
.mj-column-per-50 { width:50% !important; max-width: 50%; }
      }
    </style>
    <style media=\\"screen and (min-width:576px)\\">
      .moz-text-html .mj-column-per-100 { width:100% !important; max-width: 100%; }
.moz-text-html .mj-column-per-65 { width:65% !important; max-width: 65%; }
.moz-text-html .mj-column-per-15 { width:15% !important; max-width: 15%; }
.moz-text-html .mj-column-per-10 { width:10% !important; max-width: 10%; }
.moz-text-html .mj-column-per-50 { width:50% !important; max-width: 50%; }
    </style>
    
  
        <style type=\\"text/css\\">
        
        

    @media only screen and (max-width:576px) {
      table.mj-full-width-mobile { width: 100% !important; }
      td.mj-full-width-mobile { width: auto !important; }
    }
  
        </style>
        <style type=\\"text/css\\">@media only screen and (max-width: 480px) { 
                  *[class~=hide_on_mobile] { display: none !important;} 
                  *[class~=hoverTable] { table-layout: auto !important;}
                }</style>
        
      </head>
      <body style=\\"word-spacing:normal;background-color:white;\\">
        
        
      <div
         style=\\"background-color:white;\\"
      >
        
      
      <!--[if mso | IE]><table align=\\"center\\" border=\\"0\\" cellpadding=\\"0\\" cellspacing=\\"0\\" class=\\"\\" style=\\"width:600px;\\" width=\\"600\\" bgcolor=\\"#f7f7f7\\" ><tr><td style=\\"line-height:0px;font-size:0px;mso-line-height-rule:exactly;\\"><v:rect style=\\"width:600px;\\" xmlns:v=\\"urn:schemas-microsoft-com:vml\\" fill=\\"true\\" stroke=\\"false\\"><v:fill origin=\\"0.5, 0\\" position=\\"0.5, 0\\" src=\\"\\" color=\\"#f7f7f7\\" type=\\"tile\\" size=\\"600px\\" aspect=\\"atmost\\" /><v:textbox style=\\"mso-fit-shape-to-text:true\\" inset=\\"0,0,0,0\\"><![endif]-->
          
      <div  style=\\"background:#f7f7f7;background-color:#f7f7f7;margin:0px auto;max-width:600px;\\">
        <div  style=\\"line-height:0;font-size:0;\\">
        <table
           align=\\"center\\" background=\\"\\" border=\\"0\\" cellpadding=\\"0\\" cellspacing=\\"0\\" role=\\"presentation\\" style=\\"background:#f7f7f7;background-color:#f7f7f7;width:100%;\\"
        >
          <tbody>
            <tr>
              <td
                 style=\\"direction:ltr;font-size:0px;padding:0px;padding-bottom:32px;padding-left:40px;padding-right:40px;padding-top:32px;text-align:center;\\"
              >
                <!--[if mso | IE]><table role=\\"presentation\\" border=\\"0\\" cellpadding=\\"0\\" cellspacing=\\"0\\"><tr><td class=\\"\\" style=\\"width:520px;\\" ><![endif]-->
            
      <div
         class=\\"mj-column-per-100 mj-outlook-group-fix\\" style=\\"font-size:0;line-height:0;text-align:left;display:inline-block;width:100%;direction:ltr;\\"
      >
        <!--[if mso | IE]><table border=\\"0\\" cellpadding=\\"0\\" cellspacing=\\"0\\" role=\\"presentation\\" ><tr><td style=\\"vertical-align:top;width:338px;\\" ><![endif]-->
                
      <div
         class=\\"mj-column-per-65 mj-outlook-group-fix\\" style=\\"font-size:0px;text-align:left;direction:ltr;display:inline-block;vertical-align:top;width:65%;\\"
      >
        
      <table
         border=\\"0\\" cellpadding=\\"0\\" cellspacing=\\"0\\" role=\\"presentation\\" width=\\"100%\\"
      >
        <tbody>
          <tr>
            <td  style=\\"vertical-align:top;padding:0px;\\">
              
      <table
         border=\\"0\\" cellpadding=\\"0\\" cellspacing=\\"0\\" role=\\"presentation\\" style=\\"\\" width=\\"100%\\"
      >
        <tbody>
          
              <tr>
                <td
                   align=\\"left\\" style=\\"font-size:0px;padding:0px;word-break:break-word;\\"
                >
                  
      <table
         border=\\"0\\" cellpadding=\\"0\\" cellspacing=\\"0\\" role=\\"presentation\\" style=\\"border-collapse:collapse;border-spacing:0px;\\"
      >
        <tbody>
          <tr>
            <td  style=\\"width:145px;\\">
              
      <img
         height=\\"auto\\" src=\\"http://localhost:3000/static/banners/like-coin-press-kit-liker-land-dark@3x.png\\" style=\\"border:0;display:block;outline:none;text-decoration:none;height:auto;width:100%;font-size:14px;\\" width=\\"145\\"
      />
    
            </td>
          </tr>
        </tbody>
      </table>
    
                </td>
              </tr>
            
        </tbody>
      </table>
    
            </td>
          </tr>
        </tbody>
      </table>
    
      </div>
    
              <!--[if mso | IE]></td><td style=\\"vertical-align:top;width:78px;\\" ><![endif]-->
                
      <div
         class=\\"mj-column-per-15 mj-outlook-group-fix hide_on_mobile\\" style=\\"font-size:0px;text-align:left;direction:ltr;display:inline-block;vertical-align:top;width:15%;\\"
      >
        
      <table
         border=\\"0\\" cellpadding=\\"0\\" cellspacing=\\"0\\" role=\\"presentation\\" width=\\"100%\\"
      >
        <tbody>
          <tr>
            <td  style=\\"vertical-align:top;padding:0px;\\">
              
      <table
         border=\\"0\\" cellpadding=\\"0\\" cellspacing=\\"0\\" role=\\"presentation\\" style=\\"\\" width=\\"100%\\"
      >
        <tbody>
          
              <tr>
                <td
                   align=\\"right\\" style=\\"font-size:0px;padding:0px;word-break:break-word;\\"
                >
                  
      <div
         style=\\"font-family:Arial;font-size:14px;font-weight:600;line-height:3.0;text-align:right;color:#4a4a4a;\\"
      >下載:</div>
    
                </td>
              </tr>
            
        </tbody>
      </table>
    
            </td>
          </tr>
        </tbody>
      </table>
    
      </div>
    
              <!--[if mso | IE]></td><td style=\\"vertical-align:top;width:52px;\\" ><![endif]-->
                
      <div
         class=\\"mj-column-per-10 mj-outlook-group-fix hide_on_mobile\\" style=\\"font-size:0px;text-align:left;direction:ltr;display:inline-block;vertical-align:top;width:10%;\\"
      >
        
      <table
         border=\\"0\\" cellpadding=\\"0\\" cellspacing=\\"0\\" role=\\"presentation\\" width=\\"100%\\"
      >
        <tbody>
          <tr>
            <td  style=\\"vertical-align:top;padding:0px;\\">
              
      <table
         border=\\"0\\" cellpadding=\\"0\\" cellspacing=\\"0\\" role=\\"presentation\\" style=\\"\\" width=\\"100%\\"
      >
        <tbody>
          
              <tr>
                <td
                   align=\\"center\\" style=\\"font-size:0px;padding:0px;word-break:break-word;\\"
                >
                  
      <div
         style=\\"font-family:Arial;font-size:14px;line-height:3.0;text-align:center;color:#4a4a4a;\\"
      ><a href=\\"https://liker.land/getapp\\" target=\\"_blank\\" rel=\\"noreferrer noopener\\" color=\\"#9b9b9b\\">iOS</a></div>
    
                </td>
              </tr>
            
        </tbody>
      </table>
    
            </td>
          </tr>
        </tbody>
      </table>
    
      </div>
    
              <!--[if mso | IE]></td><td style=\\"vertical-align:top;width:52px;\\" ><![endif]-->
                
      <div
         class=\\"mj-column-per-10 mj-outlook-group-fix hide_on_mobile\\" style=\\"font-size:0px;text-align:left;direction:ltr;display:inline-block;vertical-align:top;width:10%;\\"
      >
        
      <table
         border=\\"0\\" cellpadding=\\"0\\" cellspacing=\\"0\\" role=\\"presentation\\" width=\\"100%\\"
      >
        <tbody>
          <tr>
            <td  style=\\"vertical-align:top;padding:0px;\\">
              
      <table
         border=\\"0\\" cellpadding=\\"0\\" cellspacing=\\"0\\" role=\\"presentation\\" style=\\"\\" width=\\"100%\\"
      >
        <tbody>
          
              <tr>
                <td
                   align=\\"left\\" style=\\"font-size:0px;padding:0px;word-break:break-word;\\"
                >
                  
      <div
         style=\\"font-family:Arial;font-size:14px;line-height:3.0;text-align:left;color:#4a4a4a;\\"
      ><a href=\\"https://liker.land/getapp\\" target=\\"_blank\\" rel=\\"noreferrer noopener\\" color=\\"#9b9b9b\\">Android</a></div>
    
                </td>
              </tr>
            
        </tbody>
      </table>
    
            </td>
          </tr>
        </tbody>
      </table>
    
      </div>
    
              <!--[if mso | IE]></td></tr></table><![endif]-->
      </div>
    
          <!--[if mso | IE]></td></tr></table><![endif]-->
              </td>
            </tr>
          </tbody>
        </table>
        </div>
      </div>
    
        <!--[if mso | IE]></v:textbox></v:rect></td></tr></table><table align=\\"center\\" border=\\"0\\" cellpadding=\\"0\\" cellspacing=\\"0\\" class=\\"\\" style=\\"width:600px;\\" width=\\"600\\" bgcolor=\\"#28646e\\" ><tr><td style=\\"line-height:0px;font-size:0px;mso-line-height-rule:exactly;\\"><v:rect style=\\"width:600px;\\" xmlns:v=\\"urn:schemas-microsoft-com:vml\\" fill=\\"true\\" stroke=\\"false\\"><v:fill origin=\\"0.5, 0\\" position=\\"0.5, 0\\" src=\\"\\" color=\\"#28646e\\" type=\\"tile\\" size=\\"600px\\" aspect=\\"atmost\\" /><v:textbox style=\\"mso-fit-shape-to-text:true\\" inset=\\"0,0,0,0\\"><![endif]-->
          
      <div  style=\\"background:#28646e;background-color:#28646e;margin:0px auto;max-width:600px;\\">
        <div  style=\\"line-height:0;font-size:0;\\">
        <table
           align=\\"center\\" background=\\"\\" border=\\"0\\" cellpadding=\\"0\\" cellspacing=\\"0\\" role=\\"presentation\\" style=\\"background:#28646e;background-color:#28646e;width:100%;\\"
        >
          <tbody>
            <tr>
              <td
                 style=\\"direction:ltr;font-size:0px;padding:0px;padding-bottom:48px;padding-left:32px;padding-right:32px;padding-top:48px;text-align:center;\\"
              >
                <!--[if mso | IE]><table role=\\"presentation\\" border=\\"0\\" cellpadding=\\"0\\" cellspacing=\\"0\\"><tr><td class=\\"\\" style=\\"vertical-align:top;width:536px;\\" ><![endif]-->
            
      <div
         class=\\"mj-column-per-100 mj-outlook-group-fix\\" style=\\"font-size:0px;text-align:left;direction:ltr;display:inline-block;vertical-align:top;width:100%;\\"
      >
        
      <table
         border=\\"0\\" cellpadding=\\"0\\" cellspacing=\\"0\\" role=\\"presentation\\" width=\\"100%\\"
      >
        <tbody>
          <tr>
            <td  style=\\"vertical-align:top;padding:0px;\\">
              
      <table
         border=\\"0\\" cellpadding=\\"0\\" cellspacing=\\"0\\" role=\\"presentation\\" style=\\"\\" width=\\"100%\\"
      >
        <tbody>
          
              <tr>
                <td
                   align=\\"center\\" style=\\"font-size:0px;padding:0px;padding-bottom:24px;word-break:break-word;\\"
                >
                  
      <div
         style=\\"font-family:Arial;font-size:24px;font-weight:600;line-height:1.5;text-align:center;color:white;\\"
      >恭喜，你已獲得推薦奬賞</div>
    
                </td>
              </tr>
            
              <tr>
                <td
                   align=\\"center\\" style=\\"font-size:0px;padding:0px;word-break:break-word;\\"
                >
                  
      <table
         border=\\"0\\" cellpadding=\\"0\\" cellspacing=\\"0\\" role=\\"presentation\\" style=\\"border-collapse:collapse;border-spacing:0px;\\"
      >
        <tbody>
          <tr>
            <td  style=\\"width:288px;\\">
              
      <img
         height=\\"auto\\" src=\\"http://localhost:3000/static/banners/referral-rewards.png\\" style=\\"border:0;display:block;outline:none;text-decoration:none;height:auto;width:100%;font-size:14px;\\" width=\\"288\\"
      />
    
            </td>
          </tr>
        </tbody>
      </table>
    
                </td>
              </tr>
            
              <tr>
                <td
                   align=\\"center\\" style=\\"font-size:0px;padding:0px;padding-top:32px;word-break:break-word;\\"
                >
                  
      <div
         style=\\"font-family:Arial;font-size:14px;font-weight:600;line-height:1.5;text-align:center;color:#50e3c2;\\"
      ><span style=\\"color:white\\">Ng Wing Tat</span> 已因你的推薦下載了 Liker Land。<br/>你們兩位各獲得 100 LikeCoin 奬賞。</div>
    
                </td>
              </tr>
            
        </tbody>
      </table>
    
            </td>
          </tr>
        </tbody>
      </table>
    
      </div>
    
          <!--[if mso | IE]></td></tr></table><![endif]-->
              </td>
            </tr>
          </tbody>
        </table>
        </div>
      </div>
    
        <!--[if mso | IE]></v:textbox></v:rect></td></tr></table><table align=\\"center\\" border=\\"0\\" cellpadding=\\"0\\" cellspacing=\\"0\\" class=\\"\\" style=\\"width:600px;\\" width=\\"600\\" bgcolor=\\"#f7f7f7\\" ><tr><td style=\\"line-height:0px;font-size:0px;mso-line-height-rule:exactly;\\"><v:rect style=\\"width:600px;\\" xmlns:v=\\"urn:schemas-microsoft-com:vml\\" fill=\\"true\\" stroke=\\"false\\"><v:fill origin=\\"0.5, 0\\" position=\\"0.5, 0\\" src=\\"\\" color=\\"#f7f7f7\\" type=\\"tile\\" size=\\"600px\\" aspect=\\"atmost\\" /><v:textbox style=\\"mso-fit-shape-to-text:true\\" inset=\\"0,0,0,0\\"><![endif]-->
          
      <div  style=\\"background:#f7f7f7;background-color:#f7f7f7;margin:0px auto;max-width:600px;\\">
        <div  style=\\"line-height:0;font-size:0;\\">
        <table
           align=\\"center\\" background=\\"\\" border=\\"0\\" cellpadding=\\"0\\" cellspacing=\\"0\\" role=\\"presentation\\" style=\\"background:#f7f7f7;background-color:#f7f7f7;width:100%;\\"
        >
          <tbody>
            <tr>
              <td
                 style=\\"direction:ltr;font-size:0px;padding:0px;padding-bottom:32px;padding-left:32px;padding-right:32px;padding-top:32px;text-align:center;\\"
              >
                <!--[if mso | IE]><table role=\\"presentation\\" border=\\"0\\" cellpadding=\\"0\\" cellspacing=\\"0\\"><tr><td class=\\"\\" style=\\"vertical-align:top;width:268px;\\" ><![endif]-->
            
      <div
         class=\\"mj-column-per-50 mj-outlook-group-fix\\" style=\\"font-size:0px;text-align:left;direction:ltr;display:inline-block;vertical-align:top;width:100%;\\"
      >
        
      <table
         border=\\"0\\" cellpadding=\\"0\\" cellspacing=\\"0\\" role=\\"presentation\\" width=\\"100%\\"
      >
        <tbody>
          <tr>
            <td  style=\\"vertical-align:top;padding:8px;\\">
              
      <table
         border=\\"0\\" cellpadding=\\"0\\" cellspacing=\\"0\\" role=\\"presentation\\" style=\\"\\" width=\\"100%\\"
      >
        <tbody>
          <a href=\\"https://liker.land/?utm_medium=email&amp;utm_source=email\\" target=\\"_blank\\" rel=\\"noreferrer noopener\\" style=\\"color:#28646e;text-decoration:underline;display:block;text-align:center;padding:8px;line-height:1\\"><img src=\\"https://liker.land/logo.png\\" alt=\\"\\" style=\\"width:88px;height:88px;border-radius:100%;object-fit:cover;border:2px solid #ccc\\"/></a>
              <tr>
                <td
                   align=\\"center\\" style=\\"font-size:0px;padding:0px;padding-top:8px;padding-bottom:8px;word-break:break-word;\\"
                >
                  
      <div
         style=\\"font-family:Arial;font-size:18px;font-weight:600;line-height:1.5;text-align:center;color:#28646e;\\"
      >Foundation</div>
    
                </td>
              </tr>
            
              <tr>
                <td
                   align=\\"center\\" style=\\"font-size:0px;padding:0px;word-break:break-word;\\"
                >
                  
      <div
         style=\\"font-family:Arial;font-size:20px;font-weight:600;line-height:1.5;text-align:center;color:#4a4a4a;\\"
      >+100 LIKE</div>
    
                </td>
              </tr>
            
        </tbody>
      </table>
    
            </td>
          </tr>
        </tbody>
      </table>
    
      </div>
    
          <!--[if mso | IE]></td><td class=\\"\\" style=\\"vertical-align:top;width:268px;\\" ><![endif]-->
            
      <div
         class=\\"mj-column-per-50 mj-outlook-group-fix\\" style=\\"font-size:0px;text-align:left;direction:ltr;display:inline-block;vertical-align:top;width:100%;\\"
      >
        
      <table
         border=\\"0\\" cellpadding=\\"0\\" cellspacing=\\"0\\" role=\\"presentation\\" width=\\"100%\\"
      >
        <tbody>
          <tr>
            <td  style=\\"vertical-align:top;padding:8px;\\">
              
      <table
         border=\\"0\\" cellpadding=\\"0\\" cellspacing=\\"0\\" role=\\"presentation\\" style=\\"\\" width=\\"100%\\"
      >
        <tbody>
          <a href=\\"https://liker.land/?utm_medium=email&amp;utm_source=email\\" target=\\"_blank\\" rel=\\"noreferrer noopener\\" style=\\"color:#28646e;text-decoration:underline;display:block;text-align:center;padding:8px;line-height:1;background-image:url(http://localhost:3000/static/avatar/halo/civic-liker.png);background-repeat:no-repeat;background-position:center center;background-size:contain\\"><img src=\\"http://localhost:3000/static/default-avatar.jpg\\" alt=\\"\\" style=\\"width:88px;height:88px;border-radius:100%;object-fit:cover;border:2px solid #ccc\\"/></a>
              <tr>
                <td
                   align=\\"center\\" style=\\"font-size:0px;padding:0px;padding-top:8px;padding-bottom:8px;word-break:break-word;\\"
                >
                  
      <div
         style=\\"font-family:Arial;font-size:18px;font-weight:600;line-height:1.5;text-align:center;color:#28646e;\\"
      >Ng Wing Tat</div>
    
                </td>
              </tr>
            
              <tr>
                <td
                   align=\\"center\\" style=\\"font-size:0px;padding:0px;word-break:break-word;\\"
                >
                  
      <div
         style=\\"font-family:Arial;font-size:20px;font-weight:600;line-height:1.5;text-align:center;color:#4a4a4a;\\"
      >+100 LIKE</div>
    
                </td>
              </tr>
            
        </tbody>
      </table>
    
            </td>
          </tr>
        </tbody>
      </table>
    
      </div>
    
          <!--[if mso | IE]></td></tr></table><![endif]-->
              </td>
            </tr>
          </tbody>
        </table>
        </div>
      </div>
    
        <!--[if mso | IE]></v:textbox></v:rect></td></tr></table><table align=\\"center\\" border=\\"0\\" cellpadding=\\"0\\" cellspacing=\\"0\\" class=\\"\\" style=\\"width:600px;\\" width=\\"600\\" bgcolor=\\"#f7f7f7\\" ><tr><td style=\\"line-height:0px;font-size:0px;mso-line-height-rule:exactly;\\"><v:rect style=\\"width:600px;\\" xmlns:v=\\"urn:schemas-microsoft-com:vml\\" fill=\\"true\\" stroke=\\"false\\"><v:fill origin=\\"0.5, 0\\" position=\\"0.5, 0\\" src=\\"\\" color=\\"#f7f7f7\\" type=\\"tile\\" size=\\"600px\\" aspect=\\"atmost\\" /><v:textbox style=\\"mso-fit-shape-to-text:true\\" inset=\\"0,0,0,0\\"><![endif]-->
          
      <div  style=\\"background:#f7f7f7;background-color:#f7f7f7;margin:0px auto;max-width:600px;\\">
        <div  style=\\"line-height:0;font-size:0;\\">
        <table
           align=\\"center\\" background=\\"\\" border=\\"0\\" cellpadding=\\"0\\" cellspacing=\\"0\\" role=\\"presentation\\" style=\\"background:#f7f7f7;background-color:#f7f7f7;width:100%;\\"
        >
          <tbody>
            <tr>
              <td
                 style=\\"direction:ltr;font-size:0px;padding:0px;padding-bottom:32px;padding-left:32px;padding-right:32px;padding-top:0px;text-align:center;\\"
              >
                <!--[if mso | IE]><table role=\\"presentation\\" border=\\"0\\" cellpadding=\\"0\\" cellspacing=\\"0\\"><tr><td class=\\"\\" style=\\"vertical-align:top;width:536px;\\" ><![endif]-->
            
      <div
         class=\\"mj-column-per-100 mj-outlook-group-fix\\" style=\\"font-size:0px;text-align:left;direction:ltr;display:inline-block;vertical-align:top;width:100%;\\"
      >
        
      <table
         border=\\"0\\" cellpadding=\\"0\\" cellspacing=\\"0\\" role=\\"presentation\\" width=\\"100%\\"
      >
        <tbody>
          <tr>
            <td  style=\\"vertical-align:top;padding:0px;\\">
              
      <table
         border=\\"0\\" cellpadding=\\"0\\" cellspacing=\\"0\\" role=\\"presentation\\" style=\\"\\" width=\\"100%\\"
      >
        <tbody>
          
              <tr>
                <td
                   align=\\"center\\" style=\\"font-size:0px;padding:0px;word-break:break-word;\\"
                >
                  
      <div
         style=\\"font-family:Arial;font-size:14px;line-height:1.5;text-align:center;color:#9b9b9b;\\"
      >奬金已轉帳至你的錢包，請用 <a href=\\"https://liker.land/getapp?utm_medium=email&amp;utm_source=email\\" target=\\"_blank\\" rel=\\"noreferrer noopener\\" style=\\"color:#28646e;text-decoration:underline\\">Liker Land app</a> 查看。</div>
    
                </td>
              </tr>
            
        </tbody>
      </table>
    
            </td>
          </tr>
        </tbody>
      </table>
    
      </div>
    
          <!--[if mso | IE]></td></tr></table><![endif]-->
              </td>
            </tr>
          </tbody>
        </table>
        </div>
      </div>
    
        <!--[if mso | IE]></v:textbox></v:rect></td></tr></table><table align=\\"center\\" border=\\"0\\" cellpadding=\\"0\\" cellspacing=\\"0\\" class=\\"\\" style=\\"width:600px;\\" width=\\"600\\" bgcolor=\\"#f7f7f7\\" ><tr><td style=\\"line-height:0px;font-size:0px;mso-line-height-rule:exactly;\\"><v:rect style=\\"width:600px;\\" xmlns:v=\\"urn:schemas-microsoft-com:vml\\" fill=\\"true\\" stroke=\\"false\\"><v:fill origin=\\"0.5, 0\\" position=\\"0.5, 0\\" src=\\"\\" color=\\"#f7f7f7\\" type=\\"tile\\" size=\\"600px\\" aspect=\\"atmost\\" /><v:textbox style=\\"mso-fit-shape-to-text:true\\" inset=\\"0,0,0,0\\"><![endif]-->
          
      <div  style=\\"background:#f7f7f7;background-color:#f7f7f7;margin:0px auto;max-width:600px;\\">
        <div  style=\\"line-height:0;font-size:0;\\">
        <table
           align=\\"center\\" background=\\"\\" border=\\"0\\" cellpadding=\\"0\\" cellspacing=\\"0\\" role=\\"presentation\\" style=\\"background:#f7f7f7;background-color:#f7f7f7;width:100%;\\"
        >
          <tbody>
            <tr>
              <td
                 style=\\"direction:ltr;font-size:0px;padding:0px;padding-bottom:32px;padding-left:16px;padding-right:16px;padding-top:32px;text-align:center;\\"
              >
                <!--[if mso | IE]><table role=\\"presentation\\" border=\\"0\\" cellpadding=\\"0\\" cellspacing=\\"0\\"><tr><td class=\\"\\" style=\\"vertical-align:top;width:568px;\\" ><![endif]-->
            
      <div
         class=\\"mj-column-per-100 mj-outlook-group-fix\\" style=\\"font-size:0px;text-align:left;direction:ltr;display:inline-block;vertical-align:top;width:100%;\\"
      >
        
      <table
         border=\\"0\\" cellpadding=\\"0\\" cellspacing=\\"0\\" role=\\"presentation\\" width=\\"100%\\"
      >
        <tbody>
          <tr>
            <td  style=\\"vertical-align:top;padding:0px;\\">
              
      <table
         border=\\"0\\" cellpadding=\\"0\\" cellspacing=\\"0\\" role=\\"presentation\\" style=\\"\\" width=\\"100%\\"
      >
        <tbody>
          
              <tr>
                <td
                   align=\\"center\\" style=\\"font-size:0px;padding:0px;padding-bottom:16px;word-break:break-word;\\"
                >
                  
      <table
         border=\\"0\\" cellpadding=\\"0\\" cellspacing=\\"0\\" role=\\"presentation\\" style=\\"border-collapse:collapse;border-spacing:0px;\\"
      >
        <tbody>
          <tr>
            <td  style=\\"width:400px;\\">
              
      <img
         alt=\\"Liker Land App\\" height=\\"auto\\" src=\\"http://localhost:3000/static/banners/cta-app/zh.png\\" style=\\"border:0;display:block;outline:none;text-decoration:none;height:auto;width:100%;font-size:14px;\\" width=\\"400\\"
      />
    
            </td>
          </tr>
        </tbody>
      </table>
    
                </td>
              </tr>
            
              <tr>
                <td
                   align=\\"center\\" style=\\"font-size:0px;padding:0px;padding-right:24px;padding-left:24px;word-break:break-word;\\"
                >
                  
      
     <!--[if mso | IE]><table align=\\"center\\" border=\\"0\\" cellpadding=\\"0\\" cellspacing=\\"0\\" role=\\"presentation\\" ><tr><td><![endif]-->
              <table
                 align=\\"center\\" border=\\"0\\" cellpadding=\\"0\\" cellspacing=\\"0\\" role=\\"presentation\\" style=\\"float:none;display:inline-table;\\"
              >
                
      <tr
        
      >
        <td  style=\\"padding:8px;vertical-align:middle;\\">
          <table
             border=\\"0\\" cellpadding=\\"0\\" cellspacing=\\"0\\" role=\\"presentation\\" style=\\"border-radius:3px;width:106px;\\"
          >
            <tr>
              <td  style=\\"font-size:0;height:35px;vertical-align:middle;width:106px;\\">
                <a  href=\\"https://likecoin.page.link/likerland?utm_medium=email&amp;utm_source=email\\" target=\\"_blank\\">
                    <img
                       height=\\"35\\" src=\\"http://localhost:3000/static/badges/app-store.png\\" style=\\"border-radius:3px;display:block;\\" width=\\"106\\"
                    />
                  </a>
                </td>
              </tr>
          </table>
        </td>
        
      </tr>
    
              </table>
            <!--[if mso | IE]></td><td><![endif]-->
              <table
                 align=\\"center\\" border=\\"0\\" cellpadding=\\"0\\" cellspacing=\\"0\\" role=\\"presentation\\" style=\\"float:none;display:inline-table;\\"
              >
                
      <tr
        
      >
        <td  style=\\"padding:8px;vertical-align:middle;\\">
          <table
             border=\\"0\\" cellpadding=\\"0\\" cellspacing=\\"0\\" role=\\"presentation\\" style=\\"border-radius:3px;width:119px;\\"
          >
            <tr>
              <td  style=\\"font-size:0;height:35px;vertical-align:middle;width:119px;\\">
                <a  href=\\"https://likecoin.page.link/likerland?utm_medium=email&amp;utm_source=email\\" target=\\"_blank\\">
                    <img
                       height=\\"35\\" src=\\"http://localhost:3000/static/badges/google-play.png\\" style=\\"border-radius:3px;display:block;\\" width=\\"119\\"
                    />
                  </a>
                </td>
              </tr>
          </table>
        </td>
        
      </tr>
    
              </table>
            <!--[if mso | IE]></td></tr></table><![endif]-->
    
    
                </td>
              </tr>
            
        </tbody>
      </table>
    
            </td>
          </tr>
        </tbody>
      </table>
    
      </div>
    
          <!--[if mso | IE]></td></tr></table><![endif]-->
              </td>
            </tr>
          </tbody>
        </table>
        </div>
      </div>
    
        <!--[if mso | IE]></v:textbox></v:rect></td></tr></table><table align=\\"center\\" border=\\"0\\" cellpadding=\\"0\\" cellspacing=\\"0\\" class=\\"\\" style=\\"width:600px;\\" width=\\"600\\" bgcolor=\\"white\\" ><tr><td style=\\"line-height:0px;font-size:0px;mso-line-height-rule:exactly;\\"><![endif]-->
    
      
      <div  style=\\"background:white;background-color:white;margin:0px auto;max-width:600px;\\">
        
        <table
           align=\\"center\\" border=\\"0\\" cellpadding=\\"0\\" cellspacing=\\"0\\" role=\\"presentation\\" style=\\"background:white;background-color:white;width:100%;\\"
        >
          <tbody>
            <tr>
              <td
                 style=\\"direction:ltr;font-size:0px;padding:0px;padding-bottom:24px;padding-left:32px;padding-right:32px;padding-top:24px;text-align:center;\\"
              >
                <!--[if mso | IE]><table role=\\"presentation\\" border=\\"0\\" cellpadding=\\"0\\" cellspacing=\\"0\\"><tr><td class=\\"\\" style=\\"vertical-align:top;width:536px;\\" ><![endif]-->
            
      <div
         class=\\"mj-column-per-100 mj-outlook-group-fix\\" style=\\"font-size:0px;text-align:left;direction:ltr;display:inline-block;vertical-align:top;width:100%;\\"
      >
        
      <table
         border=\\"0\\" cellpadding=\\"0\\" cellspacing=\\"0\\" role=\\"presentation\\" width=\\"100%\\"
      >
        <tbody>
          <tr>
            <td  style=\\"vertical-align:top;padding:0px;\\">
              
      <table
         border=\\"0\\" cellpadding=\\"0\\" cellspacing=\\"0\\" role=\\"presentation\\" style=\\"\\" width=\\"100%\\"
      >
        <tbody>
          
              <tr>
                <td
                   align=\\"center\\" style=\\"background:white;font-size:0px;padding:0px;padding-top:8px;padding-bottom:8px;word-break:break-word;\\"
                >
                  
      
     <!--[if mso | IE]><table align=\\"center\\" border=\\"0\\" cellpadding=\\"0\\" cellspacing=\\"0\\" role=\\"presentation\\" ><tr><td><![endif]-->
              <table
                 align=\\"center\\" border=\\"0\\" cellpadding=\\"0\\" cellspacing=\\"0\\" role=\\"presentation\\" style=\\"float:none;display:inline-table;\\"
              >
                
      <tr
        
      >
        <td  style=\\"padding:6px;vertical-align:middle;\\">
          <table
             border=\\"0\\" cellpadding=\\"0\\" cellspacing=\\"0\\" role=\\"presentation\\" style=\\"border-radius:24px;width:28px;\\"
          >
            <tr>
              <td  style=\\"font-size:0;height:28px;vertical-align:middle;width:28px;\\">
                <a  href=\\"https://discord.gg/W4DQ6peZZZ\\" target=\\"_blank\\">
                    <img
                       height=\\"28\\" src=\\"http://localhost:3000/static/social-elements/discord.png\\" style=\\"border-radius:24px;display:block;\\" width=\\"28\\"
                    />
                  </a>
                </td>
              </tr>
          </table>
        </td>
        
      </tr>
    
              </table>
            <!--[if mso | IE]></td><td><![endif]-->
              <table
                 align=\\"center\\" border=\\"0\\" cellpadding=\\"0\\" cellspacing=\\"0\\" role=\\"presentation\\" style=\\"float:none;display:inline-table;\\"
              >
                
      <tr
        
      >
        <td  style=\\"padding:6px;vertical-align:middle;\\">
          <table
             border=\\"0\\" cellpadding=\\"0\\" cellspacing=\\"0\\" role=\\"presentation\\" style=\\"border-radius:24px;width:28px;\\"
          >
            <tr>
              <td  style=\\"font-size:0;height:28px;vertical-align:middle;width:28px;\\">
                <a  href=\\"https://medium.com/likecoin\\" target=\\"_blank\\">
                    <img
                       height=\\"28\\" src=\\"http://localhost:3000/static/social-elements/medium.png\\" style=\\"border-radius:24px;display:block;\\" width=\\"28\\"
                    />
                  </a>
                </td>
              </tr>
          </table>
        </td>
        
      </tr>
    
              </table>
            <!--[if mso | IE]></td><td><![endif]-->
              <table
                 align=\\"center\\" border=\\"0\\" cellpadding=\\"0\\" cellspacing=\\"0\\" role=\\"presentation\\" style=\\"float:none;display:inline-table;\\"
              >
                
      <tr
        
      >
        <td  style=\\"padding:6px;vertical-align:middle;\\">
          <table
             border=\\"0\\" cellpadding=\\"0\\" cellspacing=\\"0\\" role=\\"presentation\\" style=\\"border-radius:24px;width:28px;\\"
          >
            <tr>
              <td  style=\\"font-size:0;height:28px;vertical-align:middle;width:28px;\\">
                <a  href=\\"https://twitter.com/likecoin\\" target=\\"_blank\\">
                    <img
                       height=\\"28\\" src=\\"http://localhost:3000/static/social-elements/twitter.png\\" style=\\"border-radius:24px;display:block;\\" width=\\"28\\"
                    />
                  </a>
                </td>
              </tr>
          </table>
        </td>
        
      </tr>
    
              </table>
            <!--[if mso | IE]></td><td><![endif]-->
              <table
                 align=\\"center\\" border=\\"0\\" cellpadding=\\"0\\" cellspacing=\\"0\\" role=\\"presentation\\" style=\\"float:none;display:inline-table;\\"
              >
                
      <tr
        
      >
        <td  style=\\"padding:6px;vertical-align:middle;\\">
          <table
             border=\\"0\\" cellpadding=\\"0\\" cellspacing=\\"0\\" role=\\"presentation\\" style=\\"border-radius:24px;width:28px;\\"
          >
            <tr>
              <td  style=\\"font-size:0;height:28px;vertical-align:middle;width:28px;\\">
                <a  href=\\"https://github.com/likecoin\\" target=\\"_blank\\">
                    <img
                       height=\\"28\\" src=\\"http://localhost:3000/static/social-elements/github.png\\" style=\\"border-radius:24px;display:block;\\" width=\\"28\\"
                    />
                  </a>
                </td>
              </tr>
          </table>
        </td>
        
      </tr>
    
              </table>
            <!--[if mso | IE]></td><td><![endif]-->
              <table
                 align=\\"center\\" border=\\"0\\" cellpadding=\\"0\\" cellspacing=\\"0\\" role=\\"presentation\\" style=\\"float:none;display:inline-table;\\"
              >
                
      <tr
        
      >
        <td  style=\\"padding:6px;vertical-align:middle;\\">
          <table
             border=\\"0\\" cellpadding=\\"0\\" cellspacing=\\"0\\" role=\\"presentation\\" style=\\"border-radius:24px;width:28px;\\"
          >
            <tr>
              <td  style=\\"font-size:0;height:28px;vertical-align:middle;width:28px;\\">
                <a  href=\\"https://www.facebook.com/groups/likecoin\\" target=\\"_blank\\">
                    <img
                       height=\\"28\\" src=\\"http://localhost:3000/static/social-elements/facebook.png\\" style=\\"border-radius:24px;display:block;\\" width=\\"28\\"
                    />
                  </a>
                </td>
              </tr>
          </table>
        </td>
        
      </tr>
    
              </table>
            <!--[if mso | IE]></td></tr></table><![endif]-->
    
    
                </td>
              </tr>
            
              <tr>
                <td
                   align=\\"center\\" style=\\"font-size:0px;padding:4px;word-break:break-word;\\"
                >
                  
      <div
         style=\\"font-family:Arial;font-size:14px;line-height:1.5;text-align:center;color:#4a4a4a;\\"
      ><a href=\\"https://docs.like.co/v/zh?utm_medium=email&amp;utm_source=email\\" target=\\"_blank\\" rel=\\"noreferrer noopener\\" style=\\"color:#28646e;text-decoration:underline\\">幫助中心</a></div>
    
                </td>
              </tr>
            
              <tr>
                <td
                   align=\\"center\\" style=\\"font-size:0px;padding:4px;word-break:break-word;\\"
                >
                  
      <div
         style=\\"font-family:Arial;font-size:14px;line-height:1.5;text-align:center;color:#4a4a4a;\\"
      ><a href=\\"https://like.co/in/settings/others?utm_medium=email&amp;utm_source=email\\" target=\\"_blank\\" rel=\\"noreferrer noopener\\" style=\\"color:#28646e;text-decoration:underline\\">取消訂閱</a></div>
    
                </td>
              </tr>
            
        </tbody>
      </table>
    
            </td>
          </tr>
        </tbody>
      </table>
    
      </div>
    
          <!--[if mso | IE]></td></tr></table><![endif]-->
              </td>
            </tr>
          </tbody>
        </table>
        
      </div>
    
      
      <!--[if mso | IE]></td></tr></table><![endif]-->
    
    
      </div>
    
      </body>
    </html>
  "
`;
